Fixed scrollbar appearing in nav

--- a/client/src/components/modules/Sidebar.css
+++ b/client/src/components/modules/Sidebar.css
@@ -100,3 +100,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .bm-item {
   display: flex;
 }
+
+.bm-menu nav {
+  overflow: hidden;
+}
